--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelDetailsPage.xaml
@@ -75,9 +75,9 @@
                             WidthRequest="200"
                             HeightRequest="200"
                             ButtonMouseOverBackgroundFill="{Binding ChannelData.ChannelColor, Mode=OneWay, Converter={StaticResource StringToColorConverter}}"
-                            ButtonStrokeColor="#80000000"
+                            ButtonStrokeColor="#000000"
                             ButtonMouseOverStrokeFill="Black"
-                            ButtonStrokeWidth="2"
+                            ButtonStrokeWidth="8"
                             Source="{Binding ChannelData.Status.CurrentProgramImage.HighResolution, Mode=OneWay}"
                             Command="{Binding ChannelData.PlayPauseCommand}"
                             DisabledText="{x:Static r:Strings.Episodes_NoAudioAvailible}"
