--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeDetailsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeDetailsPage.xaml
@@ -89,9 +89,9 @@
                             HorizontalOptions="Center"
                             WidthRequest="200"
                             HeightRequest="200"
-                            ButtonStrokeColor="#80000000"
+                            ButtonStrokeColor="#000000"
                             ButtonMouseOverStrokeFill="Black"
-                            ButtonStrokeWidth="2"
+                            ButtonStrokeWidth="8"
                             Source="{Binding EpisodeData.EpisodeImage.HighResolution, Mode=OneWay}"
                             Command="{Binding EpisodeData.PlayPauseCommand}"
                             DisabledText="{x:Static r:Strings.Episodes_NoAudioAvailible}"
