--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -90,7 +90,16 @@
                    Style="{StaticResource SubtitleTextBlockStyle}"
                    />
 
-                <Grid RowDefinitions="Auto, *" HeightRequest="700">
+                <Grid Margin="0,8,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <CheckBox IsChecked="{Binding Settings.WriteLogsToFile}" />
+                    <Label Text="{x:Static r:Strings.Settings_Debug_EnableLogToFile}" Grid.Column="1" />
+                </Grid>
+
+                <Grid RowDefinitions="Auto, *" HeightRequest="700" Margin="0,8,0,0">
                     <HorizontalStackLayout Spacing="25" Padding="30,0"  VerticalOptions="Center">
                         <Button Text="Read logs" Clicked="OnReadLogFileClicked" HorizontalOptions="Center" />
                         <Button Text="Clear logs" Clicked="OnClearLogFileClicked" HorizontalOptions="Center" />
