--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -95,9 +95,28 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <CheckBox IsChecked="{Binding Settings.WriteLogsToFile}" />
+                    <CheckBox IsChecked="{Binding Settings.WriteLogsToFile}" Margin="0,0,8,0" />
                     <Label Text="{x:Static r:Strings.Settings_Debug_EnableLogToFile}" Grid.Column="1" />
                 </Grid>
+
+                <Button 
+                    Command="{Binding ZipLogFilesCommand}" 
+                    Text="{x:Static r:Strings.Settings_Debug_SendLogFiles}" 
+                    HorizontalOptions="Start"
+                    />
+
+                <HorizontalStackLayout Margin="0,8" IsVisible="{Binding IsZippingLogFiles}">
+                    <ActivityIndicator 
+                        WidthRequest="12"
+                        HeightRequest="12"
+                        Margin="0,0,4,0" 
+                        IsRunning="True" />
+
+                    <Label Text="{x:Static r:Strings.Settings_Debug_CollectingLogFiles}"
+                           VerticalOptions="Center"
+                           />
+                </HorizontalStackLayout>
+
 
                 <Grid RowDefinitions="Auto, *" HeightRequest="700" Margin="0,8,0,0">
                     <HorizontalStackLayout Spacing="25" Padding="30,0"  VerticalOptions="Center">
